--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -16,7 +16,8 @@ code {
 
 .nameText {
   font-family: "Poiret One", cursive;
-  font-weight: 800;
+  font-size: large;
+  font-weight: bold;
 }
 
 .siteText {
@@ -76,8 +77,8 @@ code {
   grid-template-columns: repeat(3, 1fr);
 }
 
-.photomarg {
-  padding-bottom: 28px;
+.box_marg {
+  margin-bottom: 140px;
 }
 
 .center_image {
@@ -101,8 +102,8 @@ code {
 
 .f_pad {
   position: fixed;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  /* margin-top: 20px;
+  margin-bottom: 10px; */
   bottom: 0;
   left: 0;
   min-width: 100%;
@@ -112,4 +113,12 @@ code {
 
 .shad_intense {
   box-shadow: 5px 5px 10px;
+}
+
+.shad_light {
+  box-shadow: 5px 5px 20px;
+}
+
+.shad_lighter {
+  box-shadow: 3px 3px 20px;
 }
