--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -48,6 +48,10 @@ code {
   background-color: #a69cac;
 }
 
+.h_gray_text {
+  color: #a69cac;
+}
+
 .dropdown-menu > li > a:hover {
   background-color: #a69cac !important;
 }
@@ -112,8 +116,6 @@ code {
 
 .f_pad {
   position: fixed;
-  /* margin-top: 20px;
-  margin-bottom: 10px; */
   bottom: 0;
   left: 0;
   min-width: 100%;
@@ -135,4 +137,12 @@ code {
 
 .shad_lighter {
   box-shadow: 3px 3px 20px;
+}
+
+.shad_bottom {
+  box-shadow: 0px 0px 20px;
+}
+
+.tiny_padding {
+  padding-top: 2px;
 }
