--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -115,6 +115,12 @@ code {
   border-color: #161b33;
 }
 
+.cards-text-box {
+  min-height: 200px;
+  max-height: 200px;
+  /* align-items: stretch; */
+}
+
 .f_pad {
   position: fixed;
   bottom: 0;
