moved products and clothing to respective folders

--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -61,6 +61,10 @@ code {
   color: #474973;
 }
 
+.jack_white {
+  background-color: #f2efe9;
+}
+
 .bgpurple_navy {
   background-color: #474973;
 }
