--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -122,7 +122,7 @@ code {
 .cards-text-box {
   min-height: 200px;
   max-height: 200px;
-  /* align-items: stretch; */
+  /* align-items: stretch;    this didn't work. But it would be good if these heights were more flexible*/
 }
 
 .f_pad {
